Dodajanje funkcionalnosti, prevod v slo

--- a/Views/Dvorana/Index.cshtml
+++ b/Views/Dvorana/Index.cshtml
@@ -4,11 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h1>Dvorane</h1>
 <table class="table">
     <thead>
         <tr>
@@ -29,11 +25,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.kapaciteta)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
             </td>
         </tr>
 }
