--- a/Views/Vstopnica/Delete.cshtml
+++ b/Views/Vstopnica/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Preklic rezervacije</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Ste prepričani, da želite preklicati rezervacijo?</h3>
 <div>
-    <h4>Vstopnica</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -34,6 +33,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Nazaj k vstopnicam</a>
     </form>
 </div>
