--- a/Views/Vstopnica/Index.cshtml
+++ b/Views/Vstopnica/Index.cshtml
@@ -4,11 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h1>Moje Vstopnice</h1>
 <table class="table">
     <thead>
         <tr>
@@ -37,9 +33,9 @@
                 @Html.DisplayFor(modelItem => item.terminFilmaId)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                @if (item.kupljena == false) {
+                    <a asp-action="Delete" asp-route-id="@item.id">Prekliči rezervacijo</a>
+                }
             </td>
         </tr>
 }
