--- a/Views/Vstopnica/Create.cshtml
+++ b/Views/Vstopnica/Create.cshtml
@@ -3,38 +3,36 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>Vstopnica</h4>
+<style>
+    a{
+        text-decoration: none;
+    }
+</style>
+<h1>Nakup vstopnice</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="stVstopnic" class="control-label"></label>
-                <input asp-for="stVstopnic" class="form-control" />
+                <label asp-for="stVstopnic" class="control-label">Vnesite število kart, ki jih želite kupiti.</label>
+                <input asp-for="stVstopnic" class="form-control" min="1" max ="5"/>
                 <span asp-validation-for="stVstopnic" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="kupljena" /> @Html.DisplayNameFor(model => model.kupljena)
+                    <input class="form-check-input" asp-for="kupljena" />
+                    Rezerviraj vstopnico
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="terminFilmaId" class="control-label"></label>
-                <input asp-for="terminFilmaId" class="form-control" />
+                <input asp-for="terminFilmaId" class="form-control" value="@Model.terminFilmaId" type ="hidden"/>
                 <span asp-validation-for="terminFilmaId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Nakup" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
