--- a/Views/Vstopnica/Delete.cshtml
+++ b/Views/Vstopnica/Delete.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
+<style>
+    a{
+        text-decoration: none;
+    }
+</style>
 <h1>Preklic rezervacije</h1>
 
 <h3>Ste prepričani, da želite preklicati rezervacijo?</h3>
@@ -17,7 +21,7 @@
             @Html.DisplayFor(model => model.stVstopnic)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.kupljena)
+            rezervirana
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.kupljena)
@@ -32,7 +36,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Preklic" class="btn btn-danger" /> |
         <a asp-action="Index">Nazaj k vstopnicam</a>
     </form>
 </div>
