--- a/Views/Vstopnica/Edit.cshtml
+++ b/Views/Vstopnica/Edit.cshtml
@@ -3,10 +3,12 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
-<h1>Edit</h1>
-
-<h4>Vstopnica</h4>
+<style>
+    a{
+        text-decoration: none;
+    }
+</style>
+<h1>Nakup vstopnice</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,27 +17,25 @@
             <input type="hidden" asp-for="id" />
             <div class="form-group">
                 <label asp-for="stVstopnic" class="control-label"></label>
-                <input asp-for="stVstopnic" class="form-control" />
+                <input asp-for="stVstopnic" class="form-control"/>
                 <span asp-validation-for="stVstopnic" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="kupljena" /> @Html.DisplayNameFor(model => model.kupljena)
-                </label>
+                <input class="form-check-input" asp-for="kupljena" value="false" type ="hidden"/>
             </div>
             <div class="form-group">
-                <label asp-for="terminFilmaId" class="control-label"></label>
-                <input asp-for="terminFilmaId" class="form-control" />
+                <input asp-for="terminFilmaId" class="form-control" type ="hidden"/>
                 <span asp-validation-for="terminFilmaId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Nakup" class="btn btn-primary" /> |
+                <a asp-action="Index">Nazaj k vstopnicam</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    
 </div>
 
