--- a/Views/Vstopnica/Index.cshtml
+++ b/Views/Vstopnica/Index.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+<style>
+    a{
+        text-decoration: none;
+    }
+</style>
 <h1>Moje Vstopnice</h1>
 <table class="table">
     <thead>
@@ -12,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.stVstopnic)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.kupljena)
+                rezervirana
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.terminFilmaId)
@@ -33,8 +37,10 @@
                 @Html.DisplayFor(modelItem => item.terminFilmaId)
             </td>
             <td>
-                @if (item.kupljena == false) {
+                @if (item.kupljena == true) {
                     <a asp-action="Delete" asp-route-id="@item.id">Prekliči rezervacijo</a>
+                    <span> |</span> 
+                    <a asp-action="Edit" asp-route-id="@item.id">Kupi vstopnico</a>
                 }
             </td>
         </tr>
